
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int IPC_RMID ;
 int errno ;
 int printf (char*,int) ;
 int semctl (int,int ,int ,int ) ;

int free_sem(int key) {
 if(semctl(key, 0, IPC_RMID, 0) == -1) {
  printf("[*err*] semctl failed, errno == 0x%x\n", errno);
  return -1;
    }
    return 0;
}
